[project]
name = "ai_toolkit"
version = "0.0.2"
description = "AI Toolkit"
authors = [
    { name = "Tyler Yep", email = "tyep@cs.stanford.edu" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "efficientnet_pytorch",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "protobuf",
    "tensorboard",
    "torch==2.8.0",
    "torchinfo",
    "torchvision",
    "tqdm",
    "wget",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-setuptools",
	"types-tqdm",
]

[project.urls]
Homepage = "https://github.com/tyleryep/ai-toolkit"

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
ai_toolkit = [
    "py.typed",
]

[tool.mypy]
strict = true
warn_unreachable = true
disallow_any_unimported = true
extra_checks = true
enable_error_code = "ignore-without-code"
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "ai_toolkit.datasets.*",
]
allow_untyped_defs = true
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "ai_toolkit.models.*",
]
allow_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Call to deprecated create function",
]

[tool.ruff]
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = [
	"ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
	"C901",    # function is too complex (12 > 10)
	"COM812",  # Trailing comma missing
	"D",       # Docstring rules
	"EM101",   # Exception must not use a string literal, assign to variable first
	"EM102",   # Exception must not use an f-string literal, assign to variable first
	"ERA001",  # Found commented-out code
	"FBT001",  # Boolean positional arg in function definition
	"FBT002",  # Boolean default value in function definition
	"FBT003",  # Boolean positional value in function call
	"FIX002",  # Line contains TODO
	"PLR0911", # Too many return statements (11 > 6)
	"PLR2004", # Magic value used in comparison, consider replacing 2 with a constant variable
	"PLR0912", # Too many branches
	"PLR0913", # Too many arguments to function call
	"PLR0915", # Too many statements
	"S101",    # Use of `assert` detected
	"S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
	"T201",    # print() found
	"T203",    # pprint() found
    "TC006",   # Add quotes to type expression in `typing.cast()`
	"TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
	"TD003",   # Missing issue link on the line following this TODO
	"TD005",   # Missing issue description after `TODO`
	"TRY003",  # Avoid specifying long messages outside the exception class

	# ai-toolkit-specific ignores
	"ANN001", # Missing type annotation for function argument `img_dim`
	"ANN201", # Missing return type annotation for public function `forward`
	"ANN202", # Missing return type annotation for private function `_flip_coco_person_keypoints`
	"ANN204", # Missing return type annotation for special method `__init__`
	"ANN205", # Missing return type annotation for staticmethod `get_transforms`
	"N803",   # Argument name `X` should be lowercase
	"N806",   # Variable `X` in function should be lowercase
	"N812",   # Lowercase `functional` imported as non-lowercase `F`
	"NPY002", # Replace legacy `np.random.randn` call with `np.random.Generator`
]
