[metadata]
name = ai_toolkit
version = 0.0.1
description = AI Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/ai-toolkit
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7

[mypy]
strict = True
ignore_missing_imports = True
implicit_reexport = True
allow_untyped_calls = True
warn_unused_configs = True

[mypy-src.datasets.*]
allow_untyped_defs = True

[mypy-src.models.*]
allow_untyped_defs = True

[pylint.MASTER]
load-plugins = pylint_strict_informational

[pylint.MESSAGES CONTROL]
generated-members = numpy.*, torch.*, tensorflow.*
extension-pkg-whitelist = numpy, torch, tensorflow
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-docstring,
    too-many-arguments,
    too-many-instance-attributes,
    too-many-locals,
    not-callable,
    invalid-name,
    duplicate-code,
    protected-access,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
