[metadata]
name = ai_toolkit
version = 0.0.2
description = AI Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/ai-toolkit
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

[options.package_data]
ai_toolkit = py.typed

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = ignore-without-code

warn_return_any = False

[mypy-ai_toolkit.datasets.*]
allow_untyped_defs = True
allow_untyped_calls = True

[mypy-ai_toolkit.models.*]
allow_untyped_defs = True

[tool:pytest]
filterwarnings =
    ignore:Call to deprecated create function
